--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Kumar Shanu can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.instagram.com/er.kumarshanu/" target="_blank">Kumar Shanu</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.instagram.com/er.kumarshanu/" target="_blank">Kumar Shanu</a>
   <!-- Link back to Kumar Shanu can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
